src/test/ui/rfc-2632-const-trait-impl/const-check-fns-in-const-impl.stderr
error[E0015]: cannot call non-const fn `non_const` in constant functions
  --> $DIR/const-check-fns-in-const-impl.rs:11:16
   |
LL |     fn foo() { non_const() }
   |                ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
